# noscroll-inbox

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: 000-workflow.md
app/: main.py
core/: digest.py  dm_parser.py  replies.py
docs/: CODEX_PROMPT.md  DECISIONS.md  PRD.md  PROGRESS.md  WORKFLOW.md
storage/: __init__.py  sqlite_store.py
tests/: test_demo_reset.py  test_demo_script.py  test_digest.py  test_dm_contract.py  test_email_preview.py  test_inbox.py  test_links_and_allowlist.py  test_magic_link.py  test_persistence.py  test_send_digests_cli.py  test_send_preview.py  test_simulate_dm.py
tools/: demo.py  send_digests.py
